--- a/index.html
+++ b/index.html
@@ -25,27 +25,36 @@
     </div>
 
     <div class="clinicContainer">
-        <h3 id="clinic">Nossa Clínica</h3>
+        <h2 id="clinic">Nossa Clínica</h2>
         <img src="./assets/images/clinica_1.jpg" alt="MedicoAtendendo">
         <img src="./assets/images/clinica_2.jpg" alt="Clinica">
 
     </div>
 
     <div class="contactContainer">
-        <h3 id="contact">Contato</h3>
+        <h2 id="contact">Contato</h2>
         <a class="contactLinks" href="#"><img src="./assets/icons/whatsapp.png" alt="Link Whatsapp">
             <p>Agende agora sua consulta através do nosso Whatsapp</p>
         </a>
-        <a class="contactLinks" href="#"><img src="./assets/icons/telephone.png" alt="Link Telefone">
+        <div class="contactPhone">
+            <img src="./assets/icons/telephone.png" alt="Link Telefone">
+            <p>Ou fale conosco através do telefone (89) 99598-7177</p>
+        </div>
+
+        <!-- <a class="contactLinks" href="#"><img src="./assets/icons/telephone.png" alt="Link Telefone">
             <p>Ou fale conosco através do telefone (89)99598-7177</p>
-        </a>
+        </a> -->
     </div>
 
     <div class="localizationContainer">
-        <h3 id="localization">Localização</h3>
+        <h2 id="localization">Localização</h2>
         <div class="googleMaps">
+            <div id="addressContainer">  
+            <hr>
             <h4 id="address">Av. Candido Coelho, 38, São João do Piauí - PI, 64760-000
             </h4>
+        </div>
+
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3947.483244089596!2d-42.260598086226175!3d-8.354029593990816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x77798ee7693b6f3%3A0xfa8cba7b9c9eefd4!2sAv.%20Candido%20Coelho%2C%2038%2C%20S%C3%A3o%20Jo%C3%A3o%20do%20Piau%C3%AD%20-%20PI%2C%2064760-000!5e0!3m2!1spt-BR!2sbr!4v1632165658495!5m2!1spt-BR!2sbr"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
