--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
 </head>
 
 <body>
-    <nav class="menuBar">
-        <ul>
-            <li><a href="#clinic">Nossa Clínica</a></li>
-            <li><a href="#contact">Contato</a></li>
-            <li><a href="#localization">Localização</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="menuBar">
+            <ul>
+                <li><a href="#clinic">Nossa Clínica</a></li>
+                <li><a href="#contact">Contato</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#localization">Localização</a></li>
+            </ul>
+        </nav>
+    </header>
+
 
     <div class="welcomeContainer">
-        <h2 id="welcome">Bem vindo à Clínica Mais Saúde, estamos sempre aqui para lhe atender!</h2>
+        <div id="welcome">
+            <!-- <h1>Bem vindo à Clínica Mais Saúde, estamos sempre aqui para lhe atender!</h1> -->
+        </div>
         <img id="imgLogo" src="./assets/images/clinica_mais_saude.png" alt="logoClinicaMaisSaude">
     </div>
 
@@ -42,17 +48,47 @@
         </div>
     </div>
 
+    <div class="servicesContainer">
+        <h2 id="services">Serviços</h2>
+        <div class="servicesStructure">
+            <div class="servicesList">
+                <img src="./assets/icons/doctor.png" alt="Consultas">
+                <h3>Consultas</h3>
+                <ul>
+                    <li>Cardiologista</li>
+                    <li>Ginecologista</li>
+                    <li>Dermatologista</li>
+                    <li>Psicólogo</li>
+                </ul>
+            </div>
+           
+            <div class="servicesList">
+                <img src="./assets/icons/laboratory.png" alt="Exames">
+
+                <h3>Exames</h3>
+                <ul>
+                    <li>Exames laboratoriais</li>
+                    <li>Ultrassom Abdômen Total</li>
+                    <li>Mamografia</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <div class="localizationContainer">
         <h2 id="localization">Localização</h2>
         <div class="googleMaps">
-            <div id="addressContainer">  
-            <hr>
-            <h4 id="address">Av. Candido Coelho, 38, São João do Piauí - PI, 64760-000
-            </h4>
-            <hr>
-        </div>
+            <div id="addressContainer">
+                <hr>
+                <h4 id="address">Av. Candido Coelho, 38, São João do Piauí - PI, 64760-000
+                </h4>
+                <hr>
+            </div>
 
-            <iframe
+            <iframe id="googleStreet"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3947.483244089596!2d-42.260598086226175!3d-8.354029593990816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x77798ee7693b6f3%3A0xfa8cba7b9c9eefd4!2sAv.%20Candido%20Coelho%2C%2038%2C%20S%C3%A3o%20Jo%C3%A3o%20do%20Piau%C3%AD%20-%20PI%2C%2064760-000!5e0!3m2!1spt-BR!2sbr!4v1632165658495!5m2!1spt-BR!2sbr"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
