add social container

--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
+<div class="socialContainer">
+    <a href="#"><img src="./assets/icons/instagram.png" alt="Instagram"></a>
+    <a href="#"><img src="./assets/icons/facebook.png" alt="Facebook"></a>
+    <a href="#"><img src="./assets/icons/twitter.png" alt="Twitter"></a>
 
+</div>
 
 
 </body>
